# MITCGProject

./: .gitignore  build.py  collect.py  main.py  params.py  pyproject.toml  raster.py  scratch.py  settings.py
checkin/: checkin.aux  checkin.fdb_latexmk  checkin.fls  checkin.out  checkin.tex  checkin.toc
materials/: materials.csv  materials.txt
proposal/: proposal.aux  proposal.fdb_latexmk  proposal.fls  proposal.out  proposal.tex  proposal.toc  trees.dbf  trees.shp  trees.shx
ray/: aabb.py  caster.py  frame.py  scene.py  sphere.py  triangle.py
